--- a/project/index.html
+++ b/project/index.html
@@ -1,11 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My Meeting with Three Giants</title>
- 
+  <style>
+
+    body {
+      font-family: system-ui, sans-serif;
+      background: #fafafa;
+      color: #222;
+      margin: 0;
+      line-height: 1.6;
+    }
+
+    header,
+    section,
+    footer {
+      max-width: 30rem;
+      margin: 4rem auto;
+      padding: 0 1rem;
+    }
+
+    img {
+      width: 100%;
+      border-radius: 12px;
+      margin: 1rem 0;
+    }
+
+    h1,
+    h2 {
+      text-align: center;
+    }
+
+    footer {
+      font-size: 0.75rem;
+      color: #555;
+      text-align: center;
+      padding-bottom: 2rem;
+    }
+  </style>
 </head>
+
 <body>
   <header>
     <h1>My Meeting with Three Giants</h1>
@@ -15,7 +52,8 @@
   <section>
     <h2>The First Giant</h2>
     <img src="giant1.jpg" alt="The first giant standing by a mountain" />
-    <p>He spoke slowly, like stone grinding on stone, and asked me what I was building. I said “websites.” He laughed — the kind of laugh that shakes trees.</p>
+    <p>He spoke slowly, like stone grinding on stone, and asked me what I was building. I said “websites.” He laughed —
+      the kind of laugh that shakes trees.</p>
   </section>
 
   <section>
@@ -34,4 +72,5 @@
     <p>© 2025 – A simple story told with HTML, CSS, and a little curiosity.</p>
   </footer>
 </body>
+
 </html>
